--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,11 +9,11 @@ block meta
 
 block header
 
-
-
 block content
-  h1 Примеры
-  a(href='./textResizeExample.html', target='_blank') textResizeExample
+  .cot
+    h1 Примеры
+    a.cot__item(href='./textResizeExample.html', target='_blank') Text resize example
+    a.cot__item(href='./CSSVariablesExamples.html', target='_blank') CSS variables examples
 
 //- block footer
 //-   p footer
