--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,7 +12,12 @@
 // @import 'blocks/popup';
 
 @import 'blocks/page';
+@import 'blocks/cot';
 
 @import "blocks/textResizeExample/style.css";
 @import "blocks/textResizeExample/additional";
 @import "blocks/textResizeExample/text-zoom-panel";
+
+@import "blocks/CSSVariablesExamples/style";
+
+
