--- a/src/pages/CSSVariablesExamples.pug
+++ b/src/pages/CSSVariablesExamples.pug
@@ -7,7 +7,7 @@ block meta
 block header
 
 block content
-  .CSSVariablesExamples
+  .CSSVariablesExaes
     .container
       .card
         h3.card__title Title
