--- a/src/pages/CSSVariablesExamples.pug
+++ b/src/pages/CSSVariablesExamples.pug
@@ -1,13 +1,12 @@
 extends ../pug/layout.pug
 
 block meta
-  title Главная
-  meta(name='description', content='')
+  title CSS Variables Examples
 
 block header
 
 block content
-  .CSSVariablesExaes
+  .CSSVariablesExamples
     .container
       .card
         h3.card__title Title
