--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -11,9 +11,10 @@ block header
 
 block content
   .cot
-    h1 Примеры
+    h1.cot__title Примеры
     a.cot__item(href='./textResizeExample.html', target='_blank') Text resize example
     a.cot__item(href='./CSSVariablesExamples.html', target='_blank') CSS variables examples
+    a.cot__item(href='./VariablesInMediaQueries.html', target='_blank') SASS and CSS variables in media queries
 
 //- block footer
 //-   p footer
