--- a/src/pages/textResizeExample.pug
+++ b/src/pages/textResizeExample.pug
@@ -1,7 +1,7 @@
 extends ../pug/layout.pug
 
 block meta
-  title Главная
+  title Text Resize Example
   meta(name='description', content='')
 
 block header
