--- a/src/scss/blocks/cot.scss
+++ b/src/scss/blocks/cot.scss
@@ -3,4 +3,11 @@
   flex-direction: column;
   padding: 4rem 3rem;
   font-family: sans-serif;
+
+
+
+  &__item {
+    margin: 0.5rem 0;
+    font-size: 1.25rem;
+  }
 }
