--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,10 +14,12 @@
 @import 'blocks/page';
 @import 'blocks/cot';
 
-@import "blocks/textResizeExample/style.css";
+@import "blocks/textResizeExample/book-style.css";
 @import "blocks/textResizeExample/additional";
 @import "blocks/textResizeExample/text-zoom-panel";
 
 @import "blocks/CSSVariablesExamples/style";
+
+@import "blocks/VariablesInMediaQueries/style";
 
 
