--- a/src/scss/blocks/VariablesInMediaQueries/css-vars-non-global.scss
+++ b/src/scss/blocks/VariablesInMediaQueries/css-vars-non-global.scss
@@ -1,82 +1,79 @@
-:root {
-  --
-  body {
-    --screen-xl: 1440px;
-    --screen-lg: 1024px;
-    --screen-md: 786px;
-  }
-}
+& {
+  --screen-xl: 1440px;
+  --screen-lg: 1024px;
+  --screen-md: 786px;
 
-$screen-xl: var(--screen-xl);
-
-.block {
-  width: $screen-xl;
-}
-
-@media screen and (min-width: var(--screen-xl)) {
-  .lg,
-  .md,
-  .sm {
-    display: none;
-  }
+  $screen-xl: var(--screen-xl);
 
   .block {
-    background-color: blue;
-  }
-}
-
-@media screen and (max-width: var(--screen-xl)) and (min-width: var(--screen-lg)) {
-  .xl,
-  .md,
-  .sm {
-    display: none;
+    width: $screen-xl;
   }
 
-  .lg {
-    display: inline-block;
+  @media screen and (min-width: var(--screen-xl)) {
+    .lg,
+    .md,
+    .sm {
+      display: none;
+    }
+
+    .block {
+      background-color: blue;
+    }
   }
 
-  .block {
-    background-color: green;
-  }
-}
+  @media screen and (max-width: var(--screen-xl)) and (min-width: var(--screen-lg)) {
+    .xl,
+    .md,
+    .sm {
+      display: none;
+    }
 
-@media screen and (max-width: var(--screen-lg)) and (min-width: var(--screen-md)) {
-  .xl,
-  .lg,
-  .sm {
-    display: none;
-  }
+    .lg {
+      display: inline-block;
+    }
 
-  .md {
-    display: inline-block;
-  }
-
-  .block {
-    background-color: yellow;
+    .block {
+      background-color: green;
+    }
   }
 
-  .text {
-    color: #444;
-  }
-}
+  @media screen and (max-width: var(--screen-lg)) and (min-width: var(--screen-md)) {
+    .xl,
+    .lg,
+    .sm {
+      display: none;
+    }
 
-@media screen and (max-width: var(--screen-md)) {
-  .xl,
-  .lg,
-  .md {
-    display: none;
+    .md {
+      display: inline-block;
+    }
+
+    .block {
+      background-color: yellow;
+    }
+
+    .text {
+      color: #444;
+    }
   }
 
-  .sm {
-    display: inline-block;
-  }
+  @media screen and (max-width: var(--screen-md)) {
+    .xl,
+    .lg,
+    .md {
+      display: none;
+    }
 
-  .block {
-    background-color: red;
-  }
+    .sm {
+      display: inline-block;
+    }
 
-  .text {
-    color: #fff;
+    .block {
+      background-color: red;
+    }
+
+    .text {
+      color: #fff;
+    }
   }
 }
