--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -12,6 +12,10 @@ block header
 block content
   .cot
     h1.cot__title Примеры
+    h2.cot__subtitle Хорошие и плохие подходы в CSS
+    a.cot__item(href='https://codepen.io/AlienAmigo/pen/KKLVrNP', target='_blank') Стилизация блока внутри блока
+
+    h2.cot__subtitle Хорошие и плохие подходы в CSS
     a.cot__item(href='./textResizeExample.html', target='_blank') Text resize example
     a.cot__item(href='./CSSVariablesExamples.html', target='_blank') CSS variables examples
     a.cot__item(href='./VariablesInMediaQueries.html', target='_blank') SASS and CSS variables in media queries
