--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -12,6 +12,8 @@ block header
 block content
   .cot
     h1.cot__title Примеры
+    h2.cot__subtitle БЭМ
+    a.cot__item(href='https://codepen.io/AlienAmigo/pen/mdYVgae', target='_blank') Приемущества БЭМ-нотации
     h2.cot__subtitle Хорошие и плохие подходы в CSS
     a.cot__item(href='https://codepen.io/AlienAmigo/pen/KKLVrNP', target='_blank') Стилизация блока внутри блока
 
