--- a/src/scss/blocks/VariablesInMediaQueries/style.scss
+++ b/src/scss/blocks/VariablesInMediaQueries/style.scss
@@ -51,4 +51,4 @@
 //@import "css-vars-global";
 
 // ============== non-global CSS variables =
-//@import "css-vars-non-global";
+//@import "css-vars-non-global";//
