--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -20,7 +20,7 @@ block content
     h2.cot__subtitle Хорошие и плохие подходы в CSS
     a.cot__item(href='./textResizeExample.html', target='_blank') Text resize example
     a.cot__item(href='./CSSVariablesExamples.html', target='_blank') CSS variables examples
-    a.cot__item(href='./VariablesInMediaQueries.html', target='_blank') SASS and CSS variables in media queries
+    //a.cot__item(href='./VariablesInMediaQueries.html', target='_blank') SASS and CSS variables in media queries
 
 //- block footer
 //-   p footer
