--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,7 +14,12 @@ $font-family:         -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue
 $font-size:           14px;
 $line-height:         1.4;
 
-$screen-xs:           480px;
-$screen-sm:           768px;
-$screen-md:           992px;
-$screen-lg:           1200px;
+$screen-xl-size: 1440px;
+
+body {
+  --screen-xl: $screen-xl-size;
+  --screen-lg: 1024px;
+  --screen-md: 786px;
+}
+
+$screen-xl: var(--screen-xl);
